colour changes to jumbotron, footer

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
   <!-- Jumbotron -->
 
-    <div class="jumbotron cushycms">
-          <p class="lead">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
+    <div class="jumbotron cushycms" id="contact">
+          <p class="lead mx-auto">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
           <a href="contact.html" class="btn btn-primary">Drop us a line</a>
     </div>
 
@@ -110,36 +110,31 @@
             </div>
           </div>
         </div>
-
-              <div id="news" class="cushycms"><h3>News</h3>
-
-                <h5 class="date">February 14, 2020</h5>
-
-                <h4>Workshops at As We Are</h4>
-
-                <ul>
-                  <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulsen Group.</li>
-                </ul>
-
-                <h5 class="date">July 3, 2019</h5>
-
-                <h4>New board role</h4>
-
-                <ul>
-                  <li>Governing Council Member for South Regional TAFE</li>
-                </ul>
-
-                <h5 class="date">April 2020</h5>
-
-                <h4>Current panel contracts</h4>
-
-                <ul>
-                  <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
-                  <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
-                  <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
-                </ul>
-                </div>
       </div>
+
+        <div id="news" class="cushycms">
+          <h3>News</h3>
+          <h5 class="date">February 14, 2020</h5>
+          <h4>Workshops at As We Are</h4>
+          <ul>
+            <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulsen Group.</li>
+          </ul>
+          <h5 class="date">July 3, 2019</h5>
+          <h4>New board role</h4>
+          <ul>
+            <li>Governing Council Member for South Regional TAFE</li>
+          </ul>
+          <h5 class="date">April 2020</h5>
+          <h4>Current panel contracts</h4>
+
+          <ul>
+            <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
+            <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
+            <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
+          </ul>
+        </div>
+ 
+
     </main>  
   
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
