added button group to jumbotron with anchor links

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
   <!-- Jumbotron -->
 
     <div class="jumbotron cushycms" id="contact">
-          <p class="lead mx-auto">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>
-          <a href="contact.html" class="btn btn-primary">Drop us a line</a>
-    </div>
-
+          <p class="lead mx-auto">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>          
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a class="btn btn-primary" href="tel:0411722613‬">Call us</button>
+            <a class="btn btn-primary" href="contact.html">Drop us a line</button>
+          </div>
+          
   <!-- /Jumbotron -->
 
     <main>
