updated navbar on each page again with active class; added container-fluid class where applicable

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           </li>
               </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul> 
       </div>
@@ -56,12 +55,14 @@
   <!-- Jumbotron -->
 
     <div class="jumbotron cushycms" id="contact">
+      <div class="container text-sm-center pt-5">
           <p class="lead mx-auto">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>          
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <a class="btn btn-primary" href="tel:0411722613‬">Call us</button>
-            <a class="btn btn-primary" href="contact.html">Drop us a line</button>
+          <div class="btn-group mt-4" role="group" aria-label="Basic example">
+            <a class="btn btn-primary btn-lg" href="contact.html">Drop us a line</a>
+            <a class="btn btn-light btn-lg" href="#">View case studies</a>
           </div>
-          
+        </div>
+     </div>     
   <!-- /Jumbotron -->
 
     <main>
@@ -69,19 +70,11 @@
         <div class="cushycms">
           <h5><strong>Solutions</strong></h5>
           <p>Helen Grzyb and Associates works with government and not for profit organisations to achieve the best possible value in an environment of change.</p>
-          <p>We are perfectly positioned to work with you to plan and develop the strategies for contemporary service delivery.</p>
+          <p>We are perfectly positioned to work with you to plan and develop the strategies for contemporary service delivery.</p> <br>
         </div>
 
         <div class="container-fluid cushycms">
           <div class="row justify-content-md-center">
-            <div class="col-xs-12 col-sm-6 col-md-3 col-xl-2">
-              <div class="card green-top">
-                <img alt="website icon" src="./img/target-1.svg" width="100">
-                <h2>Research</h2>
-                <h2>Policy review</h2>
-                <p>We can conduct independent reviews and evaluations of policies/programs.</p>
-              </div>
-            </div>
 
             <div class="col-xs-12 col-sm-6 col-md-3 col-xl-2">
               <div class="card green-top"><img alt="speech bubbles" src="./img/light-bulb.svg" width="100">
@@ -110,33 +103,39 @@
               <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people in government or not for profit organisations.</p>
               </div>
             </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-xl-2">
+              <div class="card green-top">
+                <img alt="website icon" src="./img/target-1.svg" width="100">
+                <h2>Review</h2>
+                <p>We can conduct independent reviews and evaluations of policies/programs.</p>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
 
-        <div id="news" class="cushycms">
-          <h3>News</h3>
-          <h5 class="date">February 14, 2020</h5>
-          <h4>Workshops at As We Are</h4>
-          <ul>
-            <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulsen Group.</li>
-          </ul>
-          <h5 class="date">July 3, 2019</h5>
-          <h4>New board role</h4>
-          <ul>
-            <li>Governing Council Member for South Regional TAFE</li>
-          </ul>
-          <h5 class="date">April 2020</h5>
-          <h4>Current panel contracts</h4>
+      <div id="news" class="container-fluid cushycms">
+        <h3>News</h3>
+        <h5 class="date">February 14, 2020</h5>
+        <h4>Workshops at As We Are</h4>
+        <ul>
+          <li>We are facilitating strategic plan workshops this coming week for As We Are, an arts/disability program that is part of the Nulsen Group.</li>
+        </ul>
+        <h5 class="date">July 3, 2019</h5>
+        <h4>New board role</h4>
+        <ul>
+          <li>Governing Council Member for South Regional TAFE</li>
+        </ul>
+        <h5 class="date">April 2020</h5>
+        <h4>Current panel contracts</h4>
 
-          <ul>
-            <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
-            <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
-            <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
-          </ul>
-        </div>
- 
-
+        <ul>
+          <li>Approved provider for the provision of stakeholder and community engagement services for Main Roads Western Australia</li>
+          <li>Approved provider for the provision of stakeholder engagement reviews for the Department of Primary Industries and Regional Development</li>
+          <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
+        </ul>
+       </div>
     </main>  
   
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
