--- a/previous-clients.html
+++ b/previous-clients.html
@@ -5,23 +5,18 @@
      <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
-<header>
-    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
-</header>
-
 <body>
-            
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-          <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+  <!-- Navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
+      <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,32 +29,29 @@
            <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
-           </li>
-            <li class="nav-item active">
+          <li class="nav-item active">
             <a class="nav-link" href="previous-clients.html">Previous clients</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html ">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-        </ul>
-     
+        </ul> 
       </div>
     </nav>
+  <!-- /Navigation -->
+
     <main>
        <div class="cushycms">
                <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for diverse clients:</p>
