--- a/case-studies.html
+++ b/case-studies.html
@@ -12,49 +12,45 @@
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
-<header>
-    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
-</header>
-
 <body>
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+
+  <!-- Navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
+      <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-            <li class="nav-item active">
+            <li class="nav-item">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
-           </li>
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="previous-clients.html">Previous clients</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html ">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-        </ul>
+        </ul> 
       </div>
     </nav>
+  <!-- /Navigation -->
 
   <main>
     <div>
