--- a/contact.html
+++ b/contact.html
@@ -12,51 +12,46 @@
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
 </head>
 
-<header>
-    <a href="index.html"> <img class="img-fluid" id="logo" src="logo.png"></a>
-</header>
-
 <body>
-    <div class="container">
-      <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+
+  <!-- Navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
+      <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
-           </li>
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="previous-clients.html">Previous clients</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html ">Contact</a>
           </li>
               </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-        </ul>
-     
+        </ul> 
       </div>
     </nav>
+  <!-- /Navigation -->
+  
     </div>
 
         <div class="typeform-widget" data-url="https://helen655881.typeform.com/to/EnOECU" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=EnOECU&utm_source=typeform.com-01E7M4YE9DV7B2QZ0WFQQXZHKM-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
