--- a/expertise.html
+++ b/expertise.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-     <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
+
+  <!-- Navigation -->
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark" style= "background-color: #3f535d;"> 
       <img class="navbar-brand w-25 p-3" src="logo.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,18 +29,15 @@
            <li class="nav-item">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
             <li class="nav-item">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
-           </li>
-            <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="previous-clients.html">Previous clients</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="index.html#news">News</a>
           </li>
@@ -47,11 +46,11 @@
           </li>
               </ul>
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
           <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
-        </ul>
-       </div>
+        </ul> 
+      </div>
     </nav>
+  <!-- /Navigation -->
 
   <main>
     <div class="container-fluid">
