navbar updates; index.html jumbotron link amended

--- a/expertise.html
+++ b/expertise.html
@@ -23,10 +23,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-           <li class="nav-item">
+           <li class="nav-item active">
             <a class="nav-link" href="expertise.html">Expertise</a>
           </li>
           <li class="nav-item">
@@ -119,7 +119,7 @@
 
 
     </main>
-       <div class="jumbotron cushycms">
+       <div class="jumbotron cushycms mb-0" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
   </div>
