--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p class="lead mx-auto">Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>          
           <div class="btn-group mt-4" role="group" aria-label="Basic example">
             <a class="btn btn-primary btn-lg" href="contact.html">Drop us a line</a>
-            <a class="btn btn-light btn-lg" href="#">View case studies</a>
+            <a class="btn btn-light btn-lg" href="tel:0411722613‬">Give us a call</a>
           </div>
         </div>
      </div>     
