--- a/previous-clients.html
+++ b/previous-clients.html
@@ -174,7 +174,7 @@
             </div>
 
     </main>
-       <div class="jumbotron cushycms" id="contact">
+       <div class="jumbotron cushycms mb-0" id="contact">
           <h2>Ready to get in touch?</h2><br>
           <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
