--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
 
       </main> 
-     <div class="jumbotron cushycms" id="contact">
+     <div class="jumbotron cushycms mb-0" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
       </div>
