--- a/case-studies.html
+++ b/case-studies.html
@@ -23,7 +23,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
            <li class="nav-item">
@@ -32,7 +32,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
-            <li class="nav-item">
+            <li class="nav-item active">
             <a class="nav-link" href="case-studies.html">Case studies</a>
           </li>
           <li class="nav-item">
@@ -127,7 +127,7 @@
 </div>
 
   </main>
-  <div class="jumbotron cushycms" id="contact">
+  <div class="jumbotron cushycms mb-0" id="contact">
                   <h2>Ready to get in touch?</h2><br>
                   <a href="contact.html" class="btn btn-primary">Drop us a line</a>
   </div>
