added container fluid class, removed <figure> element from Brookton case study

--- a/case-studies.html
+++ b/case-studies.html
@@ -53,7 +53,7 @@
   <!-- /Navigation -->
 
   <main>
-    <div>
+    <div class="container-fluid">
     <h3>Case studies</h3>
     
 
@@ -111,18 +111,19 @@
                         <li>Independent review statement as part of the project business case</li>
                     </ul>
 
-                    <p>Helen Grzyb and Associates is currently a member of MRWA's contractor panel.</p></div>
-      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
-        <h5 class="card-title">2012 &ndash; Town of Brookton WA and Baptistcare &ndash; Aged care contract review</h5>
-<p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
+                    <p>Helen Grzyb and Associates is currently a member of MRWA's contractor panel.</p>
+                  </div>
+              <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                    <h5 class="card-title">2012 &ndash; Town of Brookton WA and Baptistcare &ndash; Aged care contract review</h5>
+                    <p>Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
                    <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
                    <p>As a result of this work the contract negotiations between the two parties progressed and an updated contract was agreed which recognised the current operating and policy environment for residential aged care in regional Western Australia; the quality requirements for residential aged care services; the differing needs well as the commonalities of interest between Baptistcare and the Town of Brookton.</p>
                    <p>Reflecting the changing policy and financial environment for residential aged care, in 2019, Baptistcare took over the service from the Town of Brookton.</p>
-                   <figure>
+                   
                    <a href="https://www.baptistcare.com.au/residential-care/facilities/kalkarni-residency/"><img class="img-fluid" src="img/Kalkarni.png" alt="Kalkarni Aged Care facility"></a>
                    <figcaption class="text-muted">Image source: https://www.baptistcare.com.au/residential-care/facilities/kalkarni-residency/</figcaption>
-                 </figure></div>
-    </div>
+                </div>
+        </div>
   </div>
 </div>
 
