--- a/previous-clients.html
+++ b/previous-clients.html
@@ -53,7 +53,7 @@
   <!-- /Navigation -->
 
     <main>
-       <div class="cushycms">
+       <div class="cushycms container-fluid">
                <p>Since 1997, <strong>Helen Grzyb and Associates</strong> have worked with an extensive group of clients in government, not for profit and industry sectors. We have successfully completed projects for diverse clients:</p>
         <strong>Public Sector</strong>
 
