add 3px margin to top of most pages starting paragraph

--- a/case-studies.html
+++ b/case-studies.html
@@ -53,7 +53,7 @@
   <!-- /Navigation -->
 
   <main>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
     <h3>Case studies</h3>
     
 
