--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
   <!-- /Navigation -->
 
   <main>
-         <div id="about" class="container-fluid cushycms"><h3>About Dr Helen Grzyb</h3>
+         <div id="about" class="container-fluid cushycms mt-3"><h3>About Dr Helen Grzyb</h3>
 
             <p>Accredited by government agencies as an policy and research advisor and engagement expert in Western Australia, Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors (and a graduate of the Company Director course), of the Australian Institute of Management, and of the Australian Human Resources Institute.</p>
 
