--- a/expertise.html
+++ b/expertise.html
@@ -53,7 +53,7 @@
   <!-- /Navigation -->
 
   <main>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
      <h5><strong>Strategic plans</strong></h5>
 
       <p>We have delivered&nbsp;strategic plans such as for:</p>
