--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <title>Helen Grzyb & Associates</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -15,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
+    <!-- Favicon -->
+      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+      <link rel="manifest" href="/site.webmanifest">
+    <!--Rich previews  -->
+    <meta name="description" content=" ">
+     <title>Helen Grzyb & Associates</title>
+
 </head>
 
 <body>
